--- a/RemoteController/RemoteController/Resources/Styles/Separator.xaml
+++ b/RemoteController/RemoteController/Resources/Styles/Separator.xaml
@@ -17,6 +17,7 @@
 
     <Style TargetType="Separator" x:Key="Separator.Base">
         <Setter Property="Template" Value="{StaticResource Separator.Template}" />
+        <Setter Property="KeyboardNavigation.IsTabStop" Value="False" />
         <Setter Property="VerticalContentAlignment" Value="Stretch" />
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
     </Style>
