--- a/RemoteController/RemoteController/Themes/Generic.xaml
+++ b/RemoteController/RemoteController/Themes/Generic.xaml
@@ -6,7 +6,7 @@
     xmlns:controls="clr-namespace:RemoteController.Controls">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Generic/All.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Styles/MenuItem.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Styles/All.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <Color x:Key="{x:Static ap:ResourceKeys+Colors.Background}">#FF2D2D30</Color>
@@ -25,78 +25,6 @@
 
     <SolidColorBrush x:Key="{x:Static ap:ResourceKeys.TitleBackgroundKey}" Color="{StaticResource {x:Static ap:ResourceKeys+Colors.Background}}" />
 
-    <Style x:Key="StyledWindow.ApplicationButton" TargetType="{x:Type Button}">
-        <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}, Path=Foreground}" />
-        <!--<Setter Property="Foreground" Value="{DynamicResource {x:Static ap:StyledWindowKeys.BackgroundBrushKey}}" />-->
-        <Setter Property="Background" Value="Transparent" />
-        <Setter Property="HorizontalContentAlignment" Value="Center" />
-        <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="Padding" Value="1" />
-        <Setter Property="MinHeight" Value="25" />
-        <Setter Property="UseLayoutRounding" Value="True" />
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Grid Background="{TemplateBinding Background}">
-                        <ContentPresenter x:Name="contentPresenter"
-                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                          Margin="{TemplateBinding Padding}"
-                          RecognizesAccessKey="True" />
-                    </Grid>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="{DynamicResource {x:Static ap:ResourceKeys+Brushes.Highlight}}" />
-                        </Trigger>
-                        <Trigger Property="IsPressed" Value="True">
-                            <Setter Property="Background" Value="{DynamicResource {x:Static ap:ResourceKeys+Brushes.Active}}" />
-                        </Trigger>
-                        <Trigger Property="IsEnabled" Value="false">
-                            <Setter TargetName="contentPresenter" Property="Opacity" Value=".5" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-    <Style x:Key="StyledWindow.ApplicationButton.Base" TargetType="{x:Type Button}" BasedOn="{StaticResource StyledWindow.ApplicationButton}">
-        <Setter Property="FontFamily" Value="Marlett" />
-        <Setter Property="FontSize" Value="14" />
-        <Setter Property="Height" Value="25" />
-        <Setter Property="Width" Value="30" />
-    </Style>
-    <Style x:Key="StyledWindow.ApplicationButton.Minimize" TargetType="{x:Type Button}" BasedOn="{StaticResource StyledWindow.ApplicationButton.Base}">
-        <Setter Property="Content" Value="0" />
-        <Setter Property="Padding" Value="3.5 0 0 3" />
-        <Setter Property="ToolTip" Value="Minimize" />
-        <Setter Property="Command" Value="{Binding Source={x:Static SystemCommands.MinimizeWindowCommand}}" />
-    </Style>
-    <Style x:Key="StyledWindow.ApplicationButton.Maximize" TargetType="{x:Type Button}" BasedOn="{StaticResource StyledWindow.ApplicationButton.Base}">
-        <Setter Property="Content" Value="1" />
-        <Setter Property="Padding" Value="2 0 0 1" />
-        <Setter Property="ToolTip" Value="Maximize" />
-        <Setter Property="Margin" Value="1 0" />
-        <Setter Property="Command" Value="{Binding Source={x:Static SystemCommands.MaximizeWindowCommand}}" />
-    </Style>
-    <Style x:Key="StyledWindow.ApplicationButton.Restore" TargetType="{x:Type Button}" BasedOn="{StaticResource StyledWindow.ApplicationButton.Base}">
-        <Setter Property="Content" Value="2" />
-        <Setter Property="Padding" Value="2 0 0 1" />
-        <Setter Property="ToolTip" Value="Restore" />
-        <Setter Property="Margin" Value="1 0" />
-        <Setter Property="Command" Value="{Binding Source={x:Static SystemCommands.RestoreWindowCommand}}" />
-    </Style>
-    <Style x:Key="StyledWindow.ApplicationButton.Close" TargetType="{x:Type Button}" BasedOn="{StaticResource StyledWindow.ApplicationButton.Base}">
-        <Setter Property="Content" Value="r" />
-        <Setter Property="Padding" Value="0 0 0 1" />
-        <Setter Property="ToolTip" Value="Close" />
-        <Setter Property="Command" Value="{Binding Source={x:Static SystemCommands.CloseWindowCommand}}" />
-        <Style.Resources>
-            <SolidColorBrush x:Key="{x:Static ap:ResourceKeys+Brushes.Highlight}" Color="{StaticResource Color.Danger}" />
-            <SolidColorBrush x:Key="{x:Static ap:ResourceKeys+Brushes.Active}" Color="{StaticResource Color.Danger.Darker}"/>
-        </Style.Resources>
-    </Style>
-
     <Style x:Key="StyledWindow.Menu" TargetType="Menu">
         <Setter Property="IsMainMenu" Value="True" />
         <Setter Property="Background" Value="{Binding Background, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}" />
@@ -106,7 +34,9 @@
         <Setter Property="ItemsPanel">
             <Setter.Value>
                 <ItemsPanelTemplate>
-                    <WrapPanel />
+                    <WrapPanel
+                        IsItemsHost="True"
+                        KeyboardNavigation.DirectionalNavigation="Cycle" />
                 </ItemsPanelTemplate>
             </Setter.Value>
         </Setter>
@@ -190,7 +120,7 @@
                                                 <WrapPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Top"
                                                            Margin="4 0 2 0">
                                                     <WrapPanel.Resources>
-                                                        <Style TargetType="Button" BasedOn="{StaticResource StyledWindow.ApplicationButton}" />
+                                                        <Style TargetType="Button" BasedOn="{StaticResource ApplicationButton}" />
                                                     </WrapPanel.Resources>
                                                     <TextBlock 
                                                         x:Name="WindowTitleTextBlock" 
@@ -228,10 +158,10 @@
                                                 HorizontalAlignment="Right" 
                                                 VerticalAlignment="Top" 
                                                 WindowChrome.IsHitTestVisibleInChrome="True">
-                                                <Button Style="{StaticResource StyledWindow.ApplicationButton.Minimize}" />
-                                                <Button x:Name="Restore" Style="{StaticResource StyledWindow.ApplicationButton.Restore}" />
-                                                <Button x:Name="Maximize" Style="{StaticResource StyledWindow.ApplicationButton.Maximize}" />
-                                                <Button Style="{StaticResource StyledWindow.ApplicationButton.Close}"/>
+                                                <Button Style="{StaticResource ApplicationButton.Minimize}" />
+                                                <Button x:Name="Restore" Style="{StaticResource ApplicationButton.Restore}" />
+                                                <Button x:Name="Maximize" Style="{StaticResource ApplicationButton.Maximize}" />
+                                                <Button Style="{StaticResource ApplicationButton.Close}"/>
                                             </StackPanel>
                                         </Grid>
 
